--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "tink-skeleton-angular",
-  "description": "Tink skeleton Angular directive",
+  "name": "tink-back-to-top-angular",
+  "description": "Tink back to top Angular directive",
   "version": "1.0.0",
   "repository": {
     "type": "git",
-    "url": "git@github.com:tinkkit/tink-skeleton-angular.git"
+    "url": "git@github.com:tinkkit/tink-back-to-top-angular.git"
   },
   "dependencies": {
     "bower": "^1.3.12",
