--- a/bower.json
+++ b/bower.json
@@ -14,18 +14,18 @@
     "*.sublime-project"
   ],
   "dependencies": {
-    "angular": "~^1.4.3",
-    "angular-resource": "~^1.4.3",
-    "angular-cookies": "~^1.4.3",
-    "angular-sanitize": "~^1.4.3",
-    "angular-animate": "~^1.4.3",
-    "angular-touch": "~^1.4.3",
-    "angular-route": "~^1.4.3",
+    "angular": "~1.4.3",
+    "angular-resource": "~1.4.3",
+    "angular-cookies": "~1.4.3",
+    "angular-sanitize": "~1.4.3",
+    "angular-animate": "~1.4.3",
+    "angular-touch": "~1.4.3",
+    "angular-route": "~1.4.3",
     "jquery": "~2.1.3",
     "tink-core": "latest"
   },
   "devDependencies": {
-    "angular-mocks": "~^1.4.3",
-    "angular-scenario": "~^1.4.3"
+    "angular-mocks": "~1.4.3",
+    "angular-scenario": "~1.4.3"
   }
 }
